<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/mobile_navigation"
  app:startDestination="@+id/nav_home"
>
  <fragment
    android:id="@+id/nav_home"
    android:name="com.example.app_movil_misw4203.ui.album.AlbumFragment"
    android:label="@string/menu_album"
    tools:layout="@layout/fragment_album"
  />
  <fragment
    android:id="@+id/nav_gallery"
    android:name="com.example.app_movil_misw4203.ui.artist.ArtistFragment"
    android:label="@string/menu_artist"
    tools:layout="@layout/fragment_artist"
  />
  <fragment
    android:id="@+id/nav_slideshow"
    android:name="com.example.app_movil_misw4203.ui.collection.CollectorFragment"
    android:label="@string/menu_collection"
    tools:layout="@layout/fragment_collection"
  />
</navigation>