<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
>
  <ScrollView
    android:layout_width="412dp"
    android:layout_height="737dp"
    tools:ignore="MissingConstraints"
  >
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
    >
      <ImageView
        android:id="@+id/button_back_collector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="?android:attr/homeAsUpIndicator"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
      />
      <ImageView
          android:layout_width="340dp"
        android:layout_height="310dp"
        android:layout_marginStart="32dp"
        android:src="@drawable/collectors"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="35dp"
      />
      <TextView
        android:id="@+id/collector_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
      />
      <TextView
          android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/collector_row_phone"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        />
      <TextView
        android:id="@+id/collector_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
      />
      <TextView
          android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/collector_row_mail"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
      />
      <TextView
        android:id="@+id/collector_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
      />
      <TextView
          android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/collector_row_artist"
        android:textAlignment="center"
        android:textSize="14sp"
        android:textStyle="bold"
        />
      <TextView
        android:id="@+id/collector_performer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="14sp"
      />
    </LinearLayout>
  </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>